--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>eu.fbk.knowledgestore</groupId>
     <artifactId>ks</artifactId>
     <packaging>pom</packaging>
-    <version>1.7-SNAPSHOT</version>
+    <version>1.6.1</version>
 
     <name>ks</name>
     <description>The KnowledgeStore</description>
@@ -15,8 +15,8 @@
 
     <parent>
         <groupId>eu.fbk.dkm</groupId>
-        <artifactId>fbk-parent</artifactId>
-        <version>1.1-SNAPSHOT</version>
+        <artifactId>parent</artifactId>
+        <version>1.1</version>
     </parent>
 
     <developers>
@@ -473,7 +473,6 @@
         <tephra-version>0.2.0-ROL</tephra-version>
         <zookeeper-version>3.4.5</zookeeper-version>
         <avro-version>1.5.3</avro-version>
-        <rdfpro-version>0.5-SNAPSHOT</rdfpro-version>
     </properties>
 
     <modules>
