--- a/pom.xml
+++ b/pom.xml
@@ -473,6 +473,10 @@
         <tephra-version>0.2.0-ROL</tephra-version>
         <zookeeper-version>3.4.5</zookeeper-version>
         <avro-version>1.5.3</avro-version>
+
+        <!-- Mustache template problem with jersey 2.19 and mustache 0.9 -->
+        <jersey-version>2.17</jersey-version>
+        <mustache-version>0.8.12</mustache-version>
     </properties>
 
     <modules>
