--- a/ks-populator-naf/pom.xml
+++ b/ks-populator-naf/pom.xml
@@ -49,8 +49,16 @@
         </dependency>
         <dependency>
             <groupId>eu.fbk.rdfpro</groupId>
+            <artifactId>rdfpro-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>eu.fbk.rdfpro</groupId>
             <artifactId>rdfpro-tql</artifactId>
-            <scope>compile</scope>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.openrdf.sesame</groupId>
