--- a/ks-tool/pom.xml
+++ b/ks-tool/pom.xml
@@ -100,6 +100,10 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.bundles.repackaged</groupId>
+            <artifactId>jersey-guava</artifactId>
+        </dependency>
     </dependencies>
 
     <properties>
