--- a/ks-server-http/pom.xml
+++ b/ks-server-http/pom.xml
@@ -235,6 +235,14 @@
             <groupId>eu.fbk.knowledgestore</groupId>
             <artifactId>ks-server</artifactId>
         </dependency>
+        <dependency>
+            <groupId>eu.fbk.rdfpro</groupId>
+            <artifactId>rdfpro-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.openrdf.sesame</groupId>
+            <artifactId>sesame-rio-api</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
