--- a/ks-client/pom.xml
+++ b/ks-client/pom.xml
@@ -32,7 +32,7 @@
         <dependency>
             <groupId>eu.fbk.rdfpro</groupId>
             <artifactId>rdfpro-tql</artifactId>
-            <scope>test</scope>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>eu.fbk.knowledgestore</groupId>
